--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
 
@@ -39,16 +40,46 @@
     {% if grade > 80 %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+       <b>Congratulations, {{user.first_name}}!</b> You have passed the exam and completed the course with score {{grade}} / 100
     </div>
         {% else %}
         <div class="alert alert-danger">
             <!--HINT Display failed info -->
+            <b>Failed</b> Sorry, {{user.first_name}}! You have failed exam with score {{grade}} / 100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                {% csrf_token %}
+                <div class="form-group">
+                    {% for choice in question.choice_set.all %}
+                    <div class="form-check">
+                        <label class="form-check-label">
+                        {{ check }}
+                        {% if choice.id in selected %}  
+                            {% if choice.is_correct %}
+                                <div style="color:#4AAA46;">Correct answer: {{ choice.choice_text }}</div>
+                            {% else %}
+                                <div style="color:#FF0000;">Incorrect answer: {{ choice.choice_text }}</div>
+                            {% endif %}
+                        {% else %}
+                            {% if choice.is_correct %}
+                                <div style="color:#EFC046;">Not selected: {{ choice.choice_text}}</div>
+                            {% else %}
+                                {{ choice.choice_text }}
+                            {% endif %}
+                        {% endif %}
+                        </label>
+                    </div>
+                    {% endfor%}
+                </div>
+            </div>
+            {% endfor %}    
         </div>
     </div>
 </body>
